--- a/overlay/packages/apps/Settings/res/values/revengeos_config.xml
+++ b/overlay/packages/apps/Settings/res/values/revengeos_config.xml
@@ -12,6 +12,9 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Smartcharging -->
+    <bool name="config_supportSmartCharging">true</bool>
+
     <!-- Battery Health --> 
     <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string> 
     <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string> 
