--- a/overlay/packages/apps/Settings/res/values/ancient_config.xml
+++ b/overlay/packages/apps/Settings/res/values/ancient_config.xml
@@ -12,10 +12,23 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Smartcharging -->
+    <bool name="config_supportSmartCharging">true</bool>
+
     <!-- Battery Health --> 
     <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string> 
     <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string> 
     <string name="config_batCurCap">/sys/class/power_supply/bms/charge_full</string>
     <bool name="config_supportBatteryHealth">true</bool>
+
+    <!-- AncientOS Device Info -->
+    <string name="ancient_device_name_summary">Redmi Note 8/8T</string>
+    <string name="ancient_chipset_type_summary">Qualcomm Snapdragon™ 665</string>
+    <string name="ancient_gpu_summary">Adreno 610</string>
+    <string name="ancient_camera_mp_summary">48MP+2MP+2MP+2MP Quad Camera</string>
+    <string name="ancient_screen_type_summary">IPS LCD FHD+ 6.3 Screen</string>
+
+    <!-- AncientOS About Maintainer Info -->
+    <string name="maintainer_name">Introdructor</string>
 
 </resources>
